--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -1,5 +1,6 @@
 {
   "about_cake_pay": "Cake Pay သည် အမေရိကန်ပြည်ထောင်စုရှိ ကုန်သည် 150,000 ကျော်တွင် လက်ဆောင်ကတ်များကို လက်ဆောင်ကတ်များကို အလွယ်တကူ ဝယ်ယူနိုင်စေပါသည်။",
+  "accent_color": "အသံထွက်အရောင်",
   "account": "အကောင့်",
   "accounts": "အကောင့်များ",
   "accounts_subaddresses": "အကောင့်များနှင့် လိပ်စာများ",
@@ -569,6 +570,7 @@
   "offline": "အော့ဖ်လိုင်း",
   "ok": "ရလား",
   "old_fee": "ကြေးဟောင်း",
+  "oled_mode": "OLED mode ကို",
   "onion_link": "ကြက်သွန်လင့်",
   "online": "အွန်လိုင်း",
   "onramper_option_description": "ငွေပေးချေမှုနည်းလမ်းများစွာဖြင့် Crypto ကိုလျင်မြန်စွာ 0 ယ်ပါ။ နိုင်ငံအများစုတွင်ရရှိနိုင်ပါသည်။ ဖြန့်ဖြူးနှင့်အခကြေးငွေကွဲပြားခြားနားသည်။",
