--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -1,5 +1,6 @@
 {
   "about_cake_pay": "Cake Pay позволяет вам легко покупать подарочные карты с виртуальными активами, которые можно мгновенно потратить в более чем 150 000 продавцов в Соединенных Штатах.",
+  "accent_color": "Акцентный цвет",
   "account": "Аккаунт",
   "accounts": "Аккаунты",
   "accounts_subaddresses": "Аккаунты и субадреса",
@@ -569,6 +570,7 @@
   "offline": "Не в сети",
   "ok": "OK",
   "old_fee": "Старая плата",
+  "oled_mode": "OLED -режим",
   "onion_link": "Луковая ссылка",
   "online": "Онлайн",
   "onramper_option_description": "Быстро купите крипто со многими способами оплаты. Доступно в большинстве стран. Спреды и сборы различаются.",
