--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -1,5 +1,6 @@
 {
   "about_cake_pay": "Cake Pay ช่วยให้คุณสามารถซื้อบัตรของขวัญง่ายๆ ด้วยการใช้สินทรัพย์อนุกรม ซื้อใช้ได้ทันทีกับมากกว่า 150,000 ร้านค้าในสหรัฐอเมริกา",
+  "accent_color": "สีเน้น",
   "account": "บัญชี",
   "accounts": "บัญชี",
   "accounts_subaddresses": "บัญชีและที่อยู่ย่อย",
@@ -569,6 +570,7 @@
   "offline": "ออฟไลน์",
   "ok": "ตกลง",
   "old_fee": "ค่าธรรมเนียมเก่า",
+  "oled_mode": "โหมด OLED",
   "onion_link": "ลิงค์หัวหอม",
   "online": "ออนไลน์",
   "onramper_option_description": "ซื้อ crypto อย่างรวดเร็วด้วยวิธีการชำระเงินจำนวนมาก มีให้บริการในประเทศส่วนใหญ่ สเปรดและค่าธรรมเนียมแตกต่างกันไป",
