--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -1,5 +1,6 @@
 {
   "about_cake_pay": "Cake Pay Ви позволява лесно да купувате предплатени карти, които веднага могат да се използват с над 150,000 търговци на територията на САЩ.",
+  "accent_color": "Цвят на акцент",
   "account": "Профил",
   "accounts": "Профили",
   "accounts_subaddresses": "Профили и подадреси",
@@ -569,6 +570,7 @@
   "offline": "Офлайн",
   "ok": "Ок",
   "old_fee": "Стара такса",
+  "oled_mode": "OLED режим",
   "onion_link": "Лукова връзка",
   "online": "Онлайн",
   "onramper_option_description": "Бързо купувайте криптовалута с много методи за плащане. Предлага се в повечето страни. Разпространенията и таксите варират.",
