--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -1,5 +1,6 @@
 {
   "about_cake_pay": "Cake Pay vous permet d'acheter facilement des cartes-cadeaux avec des actifs virtuels, utilisables instantanément chez plus de 150 000 marchands aux États-Unis.",
+  "accent_color": "Couleur accent",
   "account": "Compte",
   "accounts": "Comptes",
   "accounts_subaddresses": "Comptes et sous-adresses",
@@ -569,6 +570,7 @@
   "offline": "Hors ligne",
   "ok": "OK",
   "old_fee": "Anciens",
+  "oled_mode": "Mode OLED",
   "onion_link": "Lien .onion",
   "online": "En ligne",
   "onramper_option_description": "Achetez rapidement des cryptomonnaies avec de nombreuses méthodes de paiement. Disponible dans la plupart des pays. Les spreads et les frais peuvent varier.",
