--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -1,5 +1,6 @@
 {
   "about_cake_pay": "केक पे आपको वर्चुअल संपत्ति के साथ आसानी से उपहार कार्ड खरीदने की अनुमति देता है, जिसे संयुक्त राज्य में 150,000 से अधिक व्यापारियों पर तुरंत खर्च किया जा सकता है।",
+  "accent_color": "उच्चारण रंग",
   "account": "लेखा",
   "accounts": "हिसाब किताब",
   "accounts_subaddresses": "लेखा और उपदेस",
@@ -569,6 +570,7 @@
   "offline": "ऑफ़लाइन",
   "ok": "ठीक है",
   "old_fee": "पुराना फीस",
+  "oled_mode": "OLED मोड",
   "onion_link": "प्याज का लिंक",
   "online": "ऑनलाइन",
   "onramper_option_description": "जल्दी से कई भुगतान विधियों के साथ क्रिप्टो खरीदें। अधिकांश देशों में उपलब्ध है। फैलता है और फीस अलग -अलग होती है।",
