--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -1,5 +1,6 @@
 {
   "about_cake_pay": "Cake Payを使用すると、仮想資産を含むギフトカードを簡単に購入でき、米国内の150,000を超える加盟店ですぐに利用できます。",
+  "accent_color": "アクセント色",
   "account": "アカウント",
   "accounts": "アカウント",
   "accounts_subaddresses": "アカウントとサブアドレス",
@@ -570,6 +571,7 @@
   "offline": "オフライン",
   "ok": "OK",
   "old_fee": "古い料金",
+  "oled_mode": "OLEDモード",
   "onion_link": "オニオンリンク",
   "online": "オンライン",
   "onramper_option_description": "多くの支払い方法で暗号をすばやく購入してください。ほとんどの国で利用可能です。スプレッドと料金は異なります。",
