--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -1,5 +1,6 @@
 {
   "about_cake_pay": "Cake Pay를 사용하면 가상 자산으로 기프트 카드를 쉽게 구매하여 미국 내 150,000개 이상의 가맹점에서 즉시 사용할 수 있습니다.",
+  "accent_color": "악센트 색상",
   "account": "계정",
   "accounts": "계정",
   "accounts_subaddresses": "계정 및 하위 주소",
@@ -569,6 +570,7 @@
   "offline": "오프라인",
   "ok": "확인",
   "old_fee": "이전 수수료",
+  "oled_mode": "OLED 모드",
   "onion_link": "Onion 링크",
   "online": "온라인",
   "onramper_option_description": "다양한 결제 방법으로 빠르게 암호화폐 구매. 대부분의 국가에서 사용 가능. 스프레드 및 수수료는 다양함.",
