--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -1,5 +1,6 @@
 {
   "about_cake_pay": "Met Cake Pay kunt u eenvoudig cadeaubonnen kopen met virtuele activa, die direct kunnen worden uitgegeven bij meer dan 150.000 handelaren in de Verenigde Staten.",
+  "accent_color": "Accentkleur",
   "account": "Account",
   "accounts": "Accounts",
   "accounts_subaddresses": "Accounts en subadressen",
@@ -569,6 +570,7 @@
   "offline": "Offline",
   "ok": "OK",
   "old_fee": "Oude vergoeding",
+  "oled_mode": "OLED -modus",
   "onion_link": "Ui koppeling",
   "online": "online",
   "onramper_option_description": "Koop snel crypto met veel betaalmethoden. Beschikbaar in de meeste landen. Spreads en vergoedingen variëren.",
