--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -1,5 +1,6 @@
 {
   "about_cake_pay": "Binibigyan-daan ka ng Cake Pay na madaling makabili ng mga gift card na may mga virtual na asset na magagastos kaagad sa mahigit na 150,000 merchant sa United States.",
+  "accent_color": "Kulay ng accent",
   "account": "Account",
   "accounts": "Mga Account",
   "accounts_subaddresses": "Mga account at mga subaddress",
@@ -569,6 +570,7 @@
   "offline": "Offline",
   "ok": "OK",
   "old_fee": "Dating fee",
+  "oled_mode": "OLED mode",
   "onion_link": "Onion link",
   "online": "Online",
   "onramper_option_description": "Mabilis na bumili ng crypto na may maraming paraan ng pagbabayad. Available sa karamihan ng mga bansa. Iba-iba ang mga spread at fee.",
