--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -1,5 +1,6 @@
 {
   "about_cake_pay": "Cake Pay дозволяє вам легко купувати подарункові картки з віртуальними активами, які можна миттєво витратити в понад 150 000 продавців у Сполучених Штатах.",
+  "accent_color": "Акцентний колір",
   "account": "Акаунт",
   "accounts": "Акаунти",
   "accounts_subaddresses": "Акаунти та субадреси",
@@ -569,6 +570,7 @@
   "offline": "Офлайн",
   "ok": "OK",
   "old_fee": "Стара комісія",
+  "oled_mode": "ОЛЕД -режим",
   "onion_link": "Посилання на цибулю",
   "online": "Онлайн",
   "onramper_option_description": "Швидко купуйте криптовалюту з багатьма методами оплати. Доступний у більшості країн. Поширення та збори різняться.",
