--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -60,6 +60,7 @@
   "approve": "Amincewa",
   "approve_request": "Amince da bukata",
   "approve_tokens": "Amince da Alamu",
+  "arbiscan_history": "Tarihin Arbiscan",
   "arrive_in_this_address": "${currency} ${tag} zai je wurin wannan adireshi",
   "ascending": "Hau",
   "ask_each_time": "Tambaya kowane lokaci",
