--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -60,6 +60,7 @@
   "approve": "Fi ọwọ si",
   "approve_request": "IKILỌ RẸ",
   "approve_tokens": "Ṣe fọwọsi awọn àmi",
+  "arbiscan_history": "Itan Arbiscan",
   "arrive_in_this_address": "${currency} ${tag} máa dé sí àdírẹ́sì yìí",
   "ascending": "Goke",
   "ask_each_time": "Beere lọwọ kọọkan",
