--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -60,6 +60,7 @@
   "approve": "Schvalovat",
   "approve_request": "Schválit žádost",
   "approve_tokens": "Schválit tokeny",
+  "arbiscan_history": "Arbiscan History",
   "arrive_in_this_address": "${currency} ${tag}přijde na tuto adresu",
   "ascending": "Vzestupné",
   "ask_each_time": "Zeptejte se pokaždé",
