--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -60,6 +60,7 @@
   "approve": "လက်မခံပါ။",
   "approve_request": "တောင်းဆိုမှုကိုအတည်ပြု",
   "approve_tokens": "တိုကင်အတည်ပြု",
+  "arbiscan_history": "arbiscan သမိုင်း",
   "arrive_in_this_address": "${currency} ${tag}ဤလိပ်စာသို့ ရောက်ရှိပါမည်။",
   "ascending": "တက်",
   "ask_each_time": "တစ်ခုချင်းစီကိုအချိန်မေးပါ",
