--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -60,6 +60,7 @@
   "approve": "Zatwierdzić",
   "approve_request": "Zatwierdzić żądanie",
   "approve_tokens": "Zatwierdzić tokeny",
+  "arbiscan_history": "Historia ArbiScanu",
   "arrive_in_this_address": "${currency} ${tag}dotrze na ten adres",
   "ascending": "Wznoszący się",
   "ask_each_time": "Zapytaj za każdym razem",
