--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -60,6 +60,7 @@
   "approve": "ﻭﺮﮐ ﺭﻮﻈﻨﻣ",
   "approve_request": "درخواست کو منظور کریں",
   "approve_tokens": "ٹوکن کو منظور کریں",
+  "arbiscan_history": "اربیسکن تاریخ",
   "arrive_in_this_address": "${currency} ${tag}اس پتے پر پہنچے گا۔",
   "ascending": "چڑھنے",
   "ask_each_time": "ہر بار پوچھیں",
