--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -707,7 +707,7 @@
   "restore_bitcoin_title_from_keys": "Recupera da WIF",
   "restore_description_from_backup": "Puoi recuperare l'app Cake Wallet per intero dal tuo file di backup",
   "restore_description_from_cupcake": "Collegamento con la nostra app per gap ad aria accompagnata, installata su un secondo telefono.",
-  "restore_description_from_hardware_wallet": "Ripristina da un portafoglio hardware Ledger",
+  "restore_description_from_hardware_wallet": "Collega il tuo dispositivo portafoglio hardware di diversi produttori.",
   "restore_description_from_keys": "Recupera il tuo portafoglio da una sequenza di caratteri generati dalle tue chiavi private",
   "restore_description_from_seed": "Recupera il tuo portafoglio da una combinazione di 25 o 13 parole",
   "restore_description_from_seed_keys": "Recupera il tuo portafoglio dal seme/chiavi che hai salvato in un posto sicuro",
