--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -706,7 +706,7 @@
   "restore_bitcoin_title_from_keys": "从WIF还原",
   "restore_description_from_backup": "您可以从还原整个Cake Wallet应用您的备份文件",
   "restore_description_from_cupcake": "与我们的配套空调应用程序链接，安装在第二台手机上。",
-  "restore_description_from_hardware_wallet": "从分类帐硬件钱包还原",
+  "restore_description_from_hardware_wallet": "链接来自不同制造商的硬件钱包设备。",
   "restore_description_from_keys": "使用私钥恢复钱包",
   "restore_description_from_seed": "从25个字中恢复您的钱包或13个字的组合码",
   "restore_description_from_seed_keys": "从保存到安全地方的种子/钥匙取回钱包",
