--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -257,6 +257,8 @@
   "description": "ﻞﯿﺼﻔﺗ",
   "destination_tag": "منزل کا ٹیگ:",
   "deuro_about_deuro": "ڈیورو کے بارے میں",
+  "deuro_borrowing": "ادھار لینا",
+  "deuro_borrowing_subtitle": "بی ٹی سی ، ای ٹی ایچ اور دیگر کریپٹو کرنسیوں کے خلاف ڈیورو قرض لیں۔",
   "deuro_collect_interest": "جمع کریں",
   "deuro_reinvest_interest": "دوبارہ لگائیں",
   "deuro_savings": "ڈیورو کی بچت",
