--- a/assets/text/Release_Notes.txt
+++ b/assets/text/Release_Notes.txt
@@ -1,7 +1,3 @@
-Add Base coin wallet
-Add support for Trezor
-Add support for Bitbox
-Hardware wallets flow enhancements
-New Themes
-New designs
+Enhance Trezor support
+Add Swaps.xyz Decentralized Exchange
 Bug fixes
